@@ -2,6 +2,7 @@ package de.adorsys.aspsp.xs2a.connector.spi.impl.authorisation;
 
 import de.adorsys.aspsp.xs2a.connector.spi.converter.ScaMethodConverter;
 import de.adorsys.aspsp.xs2a.connector.spi.impl.AspspConsentDataService;
+import de.adorsys.aspsp.xs2a.connector.spi.impl.FeignExceptionHandler;
 import de.adorsys.aspsp.xs2a.connector.spi.impl.FeignExceptionReader;
 import de.adorsys.ledgers.middleware.api.domain.sca.OpTypeTO;
 import de.adorsys.ledgers.middleware.api.domain.sca.SCAConsentResponseTO;
@@ -117,7 +118,7 @@ public abstract class AbstractAuthorisationSpi<T, R extends SCAResponseTO> {
             String devMessage = feignExceptionReader.getErrorMessage(feignException);
             log.error("Read available sca methods failed: consent ID {}, devMessage {}", getBusinessObjectId(businessObject), devMessage);
             return SpiResponse.<List<SpiAuthenticationObject>>builder()
-                           .error(new TppMessage(FORMAT_ERROR_SCA_METHODS))
+                           .error(FeignExceptionHandler.getFailureMessage(feignException, FORMAT_ERROR_SCA_METHODS))
                            .build();
         }
     }
@@ -217,8 +218,15 @@ public abstract class AbstractAuthorisationSpi<T, R extends SCAResponseTO> {
                                                                             SpiResponse<SpiAuthorisationStatus> authorisePsu,
                                                                             R scaBusinessObjectResponse) {
         if (EnumSet.of(EXEMPTED, PSUAUTHENTICATED, PSUIDENTIFIED).contains(scaBusinessObjectResponse.getScaStatus())) {
+            SCAResponseTO aisConsentResponse;
+            try {
+                aisConsentResponse = initiateBusinessObject(businessObject, aspspConsentDataProvider.loadAspspConsentData());
+            } catch (FeignException feignException) {
+                return SpiResponse.<SpiAuthorisationStatus>builder()
+                           .error(new TppMessage(MessageErrorCode.PSU_CREDENTIALS_INVALID))
+                           .build();
+            }
 
-            SCAResponseTO aisConsentResponse = initiateBusinessObject(businessObject, aspspConsentDataProvider.loadAspspConsentData());
             if (aisConsentResponse == null) {
                 return SpiResponse.<SpiAuthorisationStatus>builder()
                                .error(getAuthorisePsuFailureMessage(businessObject))
